--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,12 +34,24 @@ jobs:
         shell: pwsh
 
       - name: ILRepack ILRepack
-        run: >-
-          cd ILRepack\bin\Release\netcoreapp3.1\;
-          dotnet ILRepack.dll /log /wildcards /internalize /out:..\..\netcoreapp3.1\ILRepack.dll /target:library ILRepack.dll BamlParser.dll Fasterflect.dll Mono.Cecil.dll Mono.Cecil.Mdb.dll Mono.Cecil.Pdb.dll Mono.Cecil.Rocks.dll runtimes\win-x64\lib\netstandard2.0\Mono.Posix.NETStandard.dll;
-          cd ..\net461;
-          mono ILRepack.exe /log /wildcards /internalize /out:..\..\net461\ILRepack.dll /target:library ILRepack.exe BamlParser.dll Fasterflect.dll Mono.Cecil.dll Mono.Cecil.Mdb.dll Mono.Cecil.Pdb.dll Mono.Cecil.Rocks.dll Mono.Posix.dll;
+        run: |
+          cd ILRepack/bin/Release/netcoreapp3.1/;
+          dotnet ILRepack.dll /log /wildcards /internalize /out:../../netcoreapp3.1/ILRepack.dll /target:library ILRepack.dll BamlParser.dll Fasterflect.dll Mono.Cecil.dll Mono.Cecil.Mdb.dll Mono.Cecil.Pdb.dll Mono.Cecil.Rocks.dll runtimes\win-x64\lib\netstandard2.0\Mono.Posix.NETStandard.dll;
+          cd ../net461;
+          mono ILRepack.exe /log /wildcards /internalize /out:../../net461/ILRepack.dll /target:library ILRepack.exe BamlParser.dll Fasterflect.dll Mono.Cecil.dll Mono.Cecil.Mdb.dll Mono.Cecil.Pdb.dll Mono.Cecil.Rocks.dll Mono.Posix.dll;
+          cd ../netstandard2.0;
+          dotnet ILRepack.dll /log /wildcards /internalize /out:../../netstandard2.0/ILRepack.dll /target:library ILRepack.dll BamlParser.dll Fasterflect.dll Microsoft.CSharp.dll Mono.Cecil.dll Mono.Cecil.Mdb.dll Mono.Cecil.Pdb.dll Mono.Cecil.Rocks.dll System.Reflection.Emit.ILGeneration.dll System.Reflection.Emit.Lightweight.dll;
         shell: pwsh
+
+      - name: Build ILRepack
+        run: dotnet build ILRepack/ILRepack.csproj --configuration Release -o ./packages;
+        shell: pwsh
+
+      - name: Upload packages
+        uses: actions/upload-artifact@v3
+        with:
+          name: packages
+          path: ./packages/
 
       #- name: Push to NuGet
       #  run: dotnet nuget push "./packages/*.nupkg" -k ${{secrets.NUGET_API_KEY}} -s https://www.nuget.org
