--- a/ILRepack/ILRepack.props
+++ b/ILRepack/ILRepack.props
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ILRepack>$(MSBuildThisFileDirectory)..\tools\ILRepack.exe</ILRepack>
+    <ILRepackCore>$(MSBuildThisFileDirectory)..\tools\netcoreapp3.1\ILRepack.exe</ILRepack>
+    <ILRepackFx>$(MSBuildThisFileDirectory)..\tools\net461\ILRepack.exe</ILRepack>
   </PropertyGroup>
 </Project>
