--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,13 +53,13 @@ jobs:
           name: packages
           path: ./packages/
 
-      #- name: Push to NuGet
-      #  run: dotnet nuget push "./packages/*.nupkg" -k ${{secrets.NUGET_API_KEY}} -s https://www.nuget.org
-      #  shell: pwsh
+      - name: Push to NuGet
+        run: dotnet nuget push "./packages/*.nupkg" -k ${{secrets.NUGET_API_KEY}} -s https://www.nuget.org
+        shell: pwsh
 
-      #- name: Push to GPR
-      #  run: |
-      #    for f in ./packages/*.nupkg
-      #    do
-      #      curl -vX PUT -u "vslee:${{secrets.GITHUB_TOKEN}}" -F package=@$f https://nuget.pkg.github.com/BUTR/
-      #    done
+      - name: Push to GPR
+        run: |
+          for f in ./packages/*.nupkg
+          do
+            curl -vX PUT -u "vslee:${{secrets.GITHUB_TOKEN}}" -F package=@$f https://nuget.pkg.github.com/BUTR/
+          done
