--- a/ILRepack/ILRepack.nuspec
+++ b/ILRepack/ILRepack.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>BUTR.ILRepack</id>
-    <version>2.1.9-beta4</version>
+    <version>2.1.9-beta5</version>
     <title>ILRepack - Open-source alternative to ILMerge</title>
     <authors>Alexander Vostres,Francois Valdy,Sewer56,Aragas</authors>
     <owners>Aragas</owners>
@@ -13,12 +13,12 @@ The former being closed-source, impossible to customize, slow, resource consumin
   </metadata>
   <files>
     <file src="ILRepack.props" target="build\BUTR.ILRepack.props" />
-    <file src="bin\Release\net461\ILRepack.exe" target="tools\net461\ILRepack.exe" />
+    <file src="bin\net461\ILRepack.exe" target="tools\net461\ILRepack.exe" />
     <!--
-    <file src="bin\Release\netcoreapp3.1\ILRepack.dll" target="tools\netcoreapp3.1\ILRepack.dll" />
-    <file src="bin\Release\netcoreapp3.1\ILRepack.deps.json" target="tools\netcoreapp3.1\ILRepack.deps.json" />
-    <file src="bin\Release\netcoreapp3.1\ILRepack.runtimeconfig.json" target="tools\netcoreapp3.1\ILRepack.runtimeconfig.json" />
-    <file src="bin\Release\netstandard2.0\ILRepack.dll" target="lib\netstandard2.0\ILRepack.dll" />
+    <file src="bin\netcoreapp3.1\ILRepack.dll" target="tools\netcoreapp3.1\ILRepack.dll" />
+    <file src="bin\netcoreapp3.1\ILRepack.deps.json" target="tools\netcoreapp3.1\ILRepack.deps.json" />
+    <file src="bin\netcoreapp3.1\ILRepack.runtimeconfig.json" target="tools\netcoreapp3.1\ILRepack.runtimeconfig.json" />
+    <file src="bin\netstandard2.0\ILRepack.dll" target="lib\netstandard2.0\ILRepack.dll" />
     -->
   </files>
 </package>
